doctests only on py3

--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,9 @@ whitelist_externals =
     virtualenv
 commands =
     sh -c '{envbindir}/pip install -rrequirements.txt'
-    py{27,35,py,py3}: {envbindir}/pytest --doctest-glob '*.rst' --doctest-modules
+    py{35,py3}: {envbindir}/pytest --doctest-glob '*.rst' --doctest-modules
 
-    py{27,35}: {envbindir}/sphinx-build -b doctest {toxinidir}/docs {envtmpdir}/html
+    py{35}: {envbindir}/sphinx-build -b doctest {toxinidir}/docs {envtmpdir}/html
 
     # Check to make sure that releases build and install properly
     virtualenv --quiet --python=python2.7 {envtmpdir}/venv
