--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,13 @@
 pipeline:
 
+  build:
+    image: python:3-slim
+    commands:
+      - pip install -r requirements.txt
+      - pip install -e .
+      - pip install pytest
+      - pytest
+
   resolve:
     image: alpine
     commands:
