--- a/.drone.yml
+++ b/.drone.yml
@@ -5,9 +5,9 @@ pipeline:
     commands:
       - echo "starting build"
       - pip install -r requirements.txt
-      - pip install -e .
       - pip install pytest
       - pytest
+      - python setup.py sdist bdist_wheel
 
   resolve:
     image: alpine
