--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,7 @@
 pipeline:
 
   build:
-    image: python:3-slim
+    image: pybuilder
     commands:
       - echo "starting build"
       - pip install -r requirements.txt
