--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,8 @@ pipeline:
     image: pybuilder
     commands:
       - echo "starting build"
+      - echo $HOME
+      - echo $USER
       - pip install -r requirements.txt
       - pip install pytest
       - pytest
