--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,7 @@ pipeline:
   deploy:
     image: pybuilder
     commands:
+      - echo "uploading to local devpi"
       - twine upload -r devpi dist/*
     when:
       status: [ success ]
