--- a/.drone.yml
+++ b/.drone.yml
@@ -17,6 +17,15 @@ pipeline:
       - pytest
       - sphinx-build -b html doc/source dist/html
 
+  sonar:
+    image: sonar-scanner
+    commands:
+      sonar-scanner \
+      -Dsonar.projectKey=hjs \
+      -Dsonar.sources=. \
+      -Dsonar.host.url=http://127.0.0.1:9001 \
+      -Dsonar.login=fcccb2f14c39d2594d41ee6566f2bd77816c42e1
+
   deploy:
     image: pybuilder
     commands:
