--- a/.drone.yml
+++ b/.drone.yml
@@ -20,11 +20,12 @@ pipeline:
   sonar:
     image: sonar-scanner
     commands:
-      sonar-scanner \
-      -Dsonar.projectKey=hjs \
-      -Dsonar.sources=. \
-      -Dsonar.host.url=http://127.0.0.1:9001 \
-      -Dsonar.login=fcccb2f14c39d2594d41ee6566f2bd77816c42e1
+      - sonar-scanner -h
+      - sonar-scanner \
+          -Dsonar.projectKey=hjs \
+          -Dsonar.sources=. \
+          -Dsonar.host.url=http://127.0.0.1:9001 \
+          -Dsonar.login=fcccb2f14c39d2594d41ee6566f2bd77816c42e1
 
   deploy:
     image: pybuilder
