--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=hjs
-sonar.host.url=http://sonar:9000
-sonar.login=fcccb2f14c39d2594d41ee6566f2bd77816c42e1
+sonar.host.url=http://sonarqube:9000
+sonar.login=d01655b047b4d6dcf82098b4d5ccf184d702fa70
 sonar.sources=.
 
