--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ pipeline:
     image: pybuilder
     commands:
       - python -m venv .venv
-      - source . .venv/bin/activate
+      - . .venv/bin/activate
       - pip install -r dev-requirements.txt
 
   test:
