integrate pylint to sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,5 @@ sonar.projectKey=hjs
 sonar.host.url=http://sonarqube:9000
 sonar.login=d01655b047b4d6dcf82098b4d5ccf184d702fa70
 sonar.sources=.
+sonar.python.pylint.reportPath=pylint-report.txt
 
