--- a/.drone.yml
+++ b/.drone.yml
@@ -24,7 +24,8 @@ pipeline:
     image: pybuilder
     commands:
       - . .venv/bin/activate
-      - pylint hjs
+      - pylint hjs -r n --msg-template="{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}" > pylint-report.txt
+      - echo "Status: $?"
 
   doc:
     group: qa
