--- a/.drone.yml
+++ b/.drone.yml
@@ -25,6 +25,7 @@ pipeline:
     commands:
       - . .venv/bin/activate
       - pylint hjs -r n > pylint-report.txt
+      - exit 0
 
   doc:
     group: qa
