--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.host.url=http://sonarqube:9000
 sonar.login=d01655b047b4d6dcf82098b4d5ccf184d702fa70
 sonar.sources=.
 sonar.python.pylint.reportPath=pylint-report.txt
+sonar.python.coverage.reportPath=coverage.xml
 
