--- a/.drone.yml
+++ b/.drone.yml
@@ -17,7 +17,7 @@ pipeline:
     image: pybuilder
     commands:
       - . .venv/bin/activate
-      - pytest --cov-report xml --cov-report annotate:cov_annotate -cov=hjs 
+      - pytest --cov-report xml -cov=hjs
 
   pylint:
     group: qa
