--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,5 @@ sonar.login=d01655b047b4d6dcf82098b4d5ccf184d702fa70
 sonar.sources=.
 sonar.python.pylint.reportPath=pylint-report.txt
 sonar.python.coverage.reportPath=coverage.xml
+sonar.coverage.exclusions=doc/source/*.py
 
