--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=.
 sonar.python.pylint.reportPath=pylint-report.txt
 sonar.python.coverage.reportPath=coverage.xml
 sonar.coverage.exclusions=doc/source/*.py
-
+sonar.python.xunit.reportPath=xunit.xml
