--- a/.drone.yml
+++ b/.drone.yml
@@ -53,3 +53,5 @@ pipeline:
     image: plugins/slack
     webook: http://mattermost:8065/hooks/wqdf45cttt81mqcfrj5p1ewmdc
     channel: QA
+    when:
+      status: [ success, failure ]
