--- a/.drone.yml
+++ b/.drone.yml
@@ -53,5 +53,6 @@ pipeline:
     image: plugins/slack
     webook: http://mattermost:8065/hooks/wqdf45cttt81mqcfrj5p1ewmdc
     channel: QA
+    username: charbel
     when:
       status: [ success, failure ]
