--- a/.drone.yml
+++ b/.drone.yml
@@ -51,7 +51,7 @@ pipeline:
 
   slack:
     image: plugins/slack
-    webook: "http://mattermost:8065/hooks/wqdf45cttt81mqcfrj5p1ewmdc"
+    webhook: "http://mattermost:8065/hooks/wqdf45cttt81mqcfrj5p1ewmdc"
     channel: QA
     username: charbel
     when:
