--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 sudo: false
 language: python
 python:
-    - "3.5"
-    - "3.6"
-    - "3.7"
-    - "pypy"
+  - "3.3"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
+  - "3.8-dev"
+  - "pypy3.5"
 
 install: pip install tox-travis
 script: tox
