--- a/tox.ini
+++ b/tox.ini
@@ -4,25 +4,10 @@ envlist = py{37,py}, style, coverage
 
 [testenv]
 whitelist_externals =
-    python2.7
     sh
-    virtualenv
 commands =
-    sh -c '{envbindir}/pip install -rrequirements.txt'
-    py{35,36,py3}: {envbindir}/pytest --doctest-glob '*.rst' --doctest-modules
+    pytest
 
-    py{35,36}: {envbindir}/sphinx-build -b doctest {toxinidir}/docs {envtmpdir}/html
-
-    # Check to make sure that releases build and install properly
-    virtualenv --quiet --python=python2.7 {envtmpdir}/venv
-    {envtmpdir}/venv/bin/pip install --quiet wheel
-
-    {envtmpdir}/venv/bin/python {toxinidir}/setup.py --quiet bdist_wheel --dist-dir={envtmpdir}/wheel
-    sh -c '{envbindir}/pip install --quiet --upgrade --force-reinstall {envtmpdir}/wheel/hjs*.whl'
-
-    python2.7 {toxinidir}/setup.py --quiet sdist --dist-dir={envtmpdir}/sdist --format=gztar,zip
-    sh -c '{envbindir}/pip install --quiet --upgrade --force-reinstall {envtmpdir}/sdist/hjs*.tar.gz'
-    sh -c '{envbindir}/pip install --quiet --upgrade --force-reinstall {envtmpdir}/sdist/hjs*.zip'
 deps =
 
     py{27,35,36,py,py3},coverage: pytest
