use unreleased hjson

--- a/tox.ini
+++ b/tox.ini
@@ -9,16 +9,14 @@ commands =
     pytest
 
 deps =
-
-    py{27,35,36,py,py3},coverage: pytest
-    coverage: coverage >4.0,<4.4
+    py{36,37,py,py3},coverage: pytest
+    py{36,37,py,py3},coverage: mock
+    coverage: coverage >4.0
     coverage: pytest-cov
     coverage: codeclimate-test-reporter
 
-    py{27,py,py3},coverage: mock
-
-    py{27,35,36}: lxml
-    py{27,35,36,py}: sphinx
+    doc: lxml
+    doc: sphinx
 
 
 [testenv:coverage]
