use unreleased fork of hjson-py

--- a/tox.ini
+++ b/tox.ini
@@ -9,14 +9,14 @@ commands =
     pytest
 
 deps =
-    py{36,37,py,py3},coverage: pytest
-    py{36,37,py,py3},coverage: mock
+    py{35,36,37,py,py3},coverage: pytest
+    py{35,36,37,py,py3},coverage: mock
     coverage: coverage >4.0
     coverage: pytest-cov
     coverage: codeclimate-test-reporter
 
-    doc: lxml
-    doc: sphinx
+    docs: lxml
+    docs: sphinx
 
 
 [testenv:coverage]
