--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ python:
   - "3.6"
   - "pypy3.5"
 
-install: pip install tox-travis
+install:
+  - pip install -U pip
+  - pip install tox-travis
+
 script: tox
 
 
