tox: install deps from requirements.txt

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,8 @@ commands =
     pytest
 
 deps =
+    -rrequirements.txt
+
     py{35,36,37,py,py3},coverage: pytest
     py{35,36,37,py,py3},coverage: mock
     coverage: coverage >4.0
